@@ -1,5 +1,9 @@
 2008-02-08  Sven Herzberg  <sven@imendio.com>
 
+	* src/view/monkey-canvas.c: (monkey_canvas_init): use G_DEFINE_TYPE
+
+2008-02-08  Sven Herzberg  <sven@imendio.com>
+
 	* src/view/monkey-view.c: (monkey_view_init): use G_DEFINE_TYPE
 
 2008-02-08  Sven Herzberg  <sven@imendio.com>
